--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,12 @@ dependencies {
     // 侧滑删除栏
     implementation 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.3.0'
 
-    //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    //Gson converter
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+
+    // gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 }
