--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     // RecyclerView的好搭档
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
 
-    //  完整版gsy播放器引入
+    // 完整版gsy播放器引入
     implementation 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer:v8.3.0-release-jitpack'
 
     // 侧滑删除栏
@@ -62,5 +62,8 @@ dependencies {
 
     // gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // 沉浸式
+    implementation 'com.github.Ye-Miao:StatusBarUtil:1.7.5'
 
 }
