--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         jcenter() // Warning: this repository is going to shut down soon
         maven { url 'https://jitpack.io' }
         maven { url "https://maven.aliyun.com/repository/public" }
+        maven { url 'https://www.jitpack.io' }
     }
 }
 
